--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "week 11",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
