--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "week 11",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "path": "^0.12.7"
   },
